--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
             <div class="left">
                 <div class="flex-con">
                     <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta">
-                   <a href="#">@True.ux.design</a>
+                   <a href="https://www.instagram.com/true.ux.design/" target="__main">@true.ux.design</a>
                 </div>
                 <div class="flex-con link">
                     <img src="./assets/images (14) 1.png" alt="insta">
-                   <a href="#">@True.ux.design</a>
+                   <a href="https://www.linkedin.com/in/torrin-fields-336a42255/" target="__main">@Torrin Fields</a>
                 </div>
                 <div class="flex-con">
                     <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta">
-                   <a href="#">@True.ux.design</a>
+                   <a href="https://www.instagram.com/trugeeek/" target="__main">@Tru_Story</a>
                 </div>
-                <div class="flex-con">
-                    <img src="./assets/boogie8934_create_a_send_mail_icon_5d39ca7b-1acf-4410-bbaf-7c437e9d4274 1.png">
-                   <a href="#">@True.ux.design</a>
+                <div class="flex-con ">
+                    <img src="./assets/boogie8934_create_a_send_mail_icon_5d39ca7b-1acf-4410-bbaf-7c437e9d4274 1.png" class="gmail">
+                   <a href="mailto:Tfields77777@gmail.com" id="gmail" >Tfields77777@gmail.com</a>
                 </div>
             </div>
             <div class="right">
@@ -136,10 +136,13 @@
         <div class="background-2">
             <div  class="content-case">
                 <div  style="color: #fff;">
-                    <h2 class="name-study">Movie Night</h2>
-                    <p class="sec-name" >Movie Trailor Website</p>
+                    <div class="contetn-case-2">
+                        <h2 class="name-study">Movie Night</h2>
+                        <p class="sec-name" >Movie Trailor Website</p>
                     </div>
-                    <img src="./assets/Mask group (2).png" alt="city" class="upper-img" width="38%">
+                   
+                    </div>
+                    <img src="./assets/Mask group (2).png" alt="city" class="upper-img image-2-3">
                    <div  style="color: #fff;">
                     <h2 class="name-study">02 / <span>03</span></h2>
                     <a href="movie-night.html"  class="name-study"  style="color: #fff;">Case Study</a>
@@ -164,7 +167,7 @@
                     <h2 class="name-study">True Story</h2>
                     <p class="sec-name" >Pop Culture Apparel</p>
                     </div>
-                    <img src="./assets/Image 2 (1).png" alt="city" width="38%">
+                    <img src="./assets/Image 2 (1).png" alt="city" class="image-2-3">
                    <div  style="color: #fff;">
                     <h2 class="name-study">03 / <span>03</span></h2>
                     <a href="true-story.html"  class="name-study"  style="color: #d31b1b;">Case Study</a>
