--- a/movie-night.html
+++ b/movie-night.html
@@ -28,29 +28,29 @@
          <!-- contact -->
          <section id="contact">
             <div class="contact-container contact-container-2" style="display: none;">
-               <div class="parent-cn">
-                <div class="left">
-                    <div class="flex-con">
-                        <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta">
-                       <a href="https://www.instagram.com/true.ux.design/" target="__main">@true.ux.design</a>
+                <div class="parent-cn">
+                    <div class="left">
+                        <div class="flex-con">
+                            <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta" class="gmail">
+                           <a href="https://www.instagram.com/true.ux.design/" target="__main">@true.ux.design</a>
+                        </div>
+                        <div class="flex-con link">
+                            <img src="./assets/images (14) 1.png" alt="insta" class="gmail">
+                           <a href="https://www.linkedin.com/in/torrin-fields-336a42255/" target="__main" >@Torrin Fields</a>
+                        </div>
+                        <div class="flex-con">
+                            <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta" class="gmail">
+                           <a href="https://www.instagram.com/trugeeek/" target="__main">@Tru_Story</a>
+                        </div>
+                        <div class="flex-con ">
+                            <img src="./assets/boogie8934_create_a_send_mail_icon_5d39ca7b-1acf-4410-bbaf-7c437e9d4274 1.png" id="gmail">
+                           <a href="mailto:Tfields77777@gmail.com" id="gmail" >Tfields77777@gmail.com</a>
+                        </div>
                     </div>
-                    <div class="flex-con link">
-                        <img src="./assets/images (14) 1.png" alt="insta">
-                       <a href="https://www.linkedin.com/in/torrin-fields-336a42255/" target="__main">@Torrin Fields</a>
+                    <div class="right">
+                        <img src="./assets/boogie8934_Craft_an_image_that_represents_communication_and_con_b40e7ed0-8074-41bf-9e61-a0928de6f621 1.png" alt="craft" width="70%">
                     </div>
-                    <div class="flex-con">
-                        <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta">
-                       <a href="https://www.instagram.com/trugeeek/" target="__main">@Tru_Story</a>
-                    </div>
-                    <div class="flex-con ">
-                        <img src="./assets/boogie8934_create_a_send_mail_icon_5d39ca7b-1acf-4410-bbaf-7c437e9d4274 1.png" class="gmail">
-                       <a href="mailto:Tfields77777@gmail.com" id="gmail" >Tfields77777@gmail.com</a>
-                    </div>
-                </div>
-                <div class="right">
-                    <img src="./assets/boogie8934_Craft_an_image_that_represents_communication_and_con_b40e7ed0-8074-41bf-9e61-a0928de6f621 1.png" alt="craft" width="70%">
-                </div>
-               </div>
+                   </div>
              </div>
          </section>
      <div class="navbar inside-nav">
