--- a/true-story.html
+++ b/true-story.html
@@ -34,15 +34,15 @@
                             <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta" class="gmail">
                            <a href="https://www.instagram.com/true.ux.design/" target="__main">@true.ux.design</a>
                         </div>
-                        <div class="flex-con link">
+                        <div class="flex-con link-in">
                             <img src="./assets/images (14) 1.png" alt="insta" class="gmail">
                            <a href="https://www.linkedin.com/in/torrin-fields-336a42255/" target="__main" >@Torrin Fields</a>
                         </div>
-                        <div class="flex-con">
+                        <div class="flex-con link">
                             <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta" class="gmail">
                            <a href="https://www.instagram.com/trugeeek/" target="__main">@Tru_Story</a>
                         </div>
-                        <div class="flex-con ">
+                        <div class="flex-con link">
                             <img src="./assets/boogie8934_create_a_send_mail_icon_5d39ca7b-1acf-4410-bbaf-7c437e9d4274 1.png" id="gmail">
                            <a href="mailto:Tfields77777@gmail.com" id="gmail" >Tfields77777@gmail.com</a>
                         </div>
