--- a/movie-night.html
+++ b/movie-night.html
@@ -56,7 +56,7 @@
      <div class="navbar inside-nav">
         <ul class="nav-list">
             <li class="nav-item"><a href="index.html">Home</a></li>
-            <li class="nav-item"><a href="movie-night.html"id="back-button">Previous page</a></li>
+            <li class="nav-item"><a href="#/back-button">Previous page</a></li>
             <li class="nav-item"><a class="nav-link" href="#" id="linkbtn">about</a></li>
             <li class="nav-item"><a class="nav-link" href="#" id="contact-link">contact</a></li>
            
