--- a/movie-night.html
+++ b/movie-night.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <section id="about"  style="display: none;">
-        <div class="about-container-sania">
-         <img src="./assets/img.jpg" alt="img" class="about-img">
+        <div class="about-container about-container-sania">
+         <img src="./assets/img.png" alt="img" class="about-img">
          <p class="para-about">Hello! Torrin Fields, a passionate UX designer with a keen eye for creating engaging and
             user-centric digital platforms. My design philosophy is deeply rooted in understanding and
             addressing the unique needs ot users. Through comprehensive research, including
@@ -28,29 +28,31 @@
          <!-- contact -->
          <section id="contact">
             <div class="contact-container contact-container-2" style="display: none;">
-                <div class="parent-cn">
-                    <div class="left">
-                        <div class="flex-con">
-                            <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta" class="gmail">
-                           <a href="https://www.instagram.com/true.ux.design/" target="__main">@true.ux.design</a>
-                        </div>
-                        <div class="flex-con link-in">
-                            <img src="./assets/images (14) 1.png" alt="insta" class="gmail">
-                           <a href="https://www.linkedin.com/in/torrin-fields-336a42255/" target="__main" >@Torrin Fields</a>
-                        </div>
-                        <div class="flex-con link">
-                            <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta" class="gmail">
-                           <a href="https://www.instagram.com/trugeeek/" target="__main">@Tru_Story</a>
-                        </div>
-                        <div class="flex-con link ">
-                            <img src="./assets/boogie8934_create_a_send_mail_icon_5d39ca7b-1acf-4410-bbaf-7c437e9d4274 1.png" id="gmail">
-                           <a href="mailto:Tfields77777@gmail.com" id="gmail" >Tfields77777@gmail.com</a>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <img src="./assets/boogie8934_Craft_an_image_that_represents_communication_and_con_b40e7ed0-8074-41bf-9e61-a0928de6f621 1.png" alt="craft" width="70%">
-                    </div>
-                   </div>
+                <h1 class="contact-h1">Conatct</h1>
+           <div class="parent-cn">
+            <div class="left">
+                <div class="flex-con">
+                    <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta" class="gmail">
+                   <a href="https://instagram.com/true.ux.designs?igshid=OGQ5ZDc2ODk2ZA==" target="__main">@true.ux.design</a>
+                </div>
+                <div class="flex-con link-in">
+                    <img src="./assets/images (14) 1.png" alt="insta" class="gmail">
+                   <a href="https://www.linkedin.com/in/torrin-fields-336a42255" target="__main" >@Torrin Fields</a>
+                </div>
+               
+            </div>
+            <div class="right">
+             
+                <div class="flex-con link">
+                    <img src="./assets/boogie8934_create_a_send_mail_icon_5d39ca7b-1acf-4410-bbaf-7c437e9d4274 1.png" id="gmail">
+                   <a href="mailto:torrinfields@trueuxdesigns.com" id="gmail" >torrinfields@trueuxdesigns.com</a>
+                </div>
+                <div class="flex-con link">
+                    <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta" class="gmail">
+                   <a href="https://instagram.com/tru_storry?igshid=NGVhN2U2NjQ0Yg==" target="__main">@Tru_Story</a>
+                </div>
+            </div>
+           </div>
              </div>
          </section>
      <div class="navbar inside-nav">
@@ -68,7 +70,7 @@
     <section class="one">
         <div class="wrapper">
             <img src="./assets/moviehu.png" alt="citizen" class="citizen">
-            <!-- <a href="https://www.thecitizenproject.org/">https://www.thecitizenproject.org/</a> -->
+            <a href="https://trustorry.com/">https://trustorry.com/</a>
         </div>
     </section>
     <section class="points">
@@ -332,7 +334,7 @@
           </div>
           <div class="butons">
             <p>Next Case Study</p>
-            <button class="foward"><a href="the-citizen-project.html"><ion-icon name="arrow-forward-outline"></ion-icon></a></button>
+            <button class="foward" onclick="window.location.href='the-citizen-project.html'"><ion-icon name="arrow-forward-outline"></ion-icon></button>
           </div>
         </div>
     </section>
