--- a/movie-night.html
+++ b/movie-night.html
@@ -32,25 +32,25 @@
                 <h1 class="contact-h1">Conatct</h1>
            <div class="parent-cn">
             <div class="left">
-                <div class="flex-con">
-                    <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta" class="gmail">
-                   <a href="https://instagram.com/true.ux.designs?igshid=OGQ5ZDc2ODk2ZA==" target="__main">@true.ux.design</a>
+                <div class="flex-con first-con">
+                    <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta">
+                   <a class="gmail" href="https://instagram.com/true.ux.designs?igshid=OGQ5ZDc2ODk2ZA==" target="__main" >@true.ux.design</a>
                 </div>
-                <div class="flex-con link-in">
-                    <img src="./assets/images (14) 1.png" alt="insta" class="gmail">
-                   <a href="https://www.linkedin.com/in/torrin-fields-336a42255" target="__main" >@Torrin Fields</a>
+                <div class="flex-con second-con">
+                    <img src="./assets/images (14) 1.png" alt="insta" >
+                   <a href="https://www.linkedin.com/in/torrin-fields-336a42255" target="__main"  >@Torrin Fields</a>
                 </div>
                
             </div>
             <div class="right">
              
-                <div class="flex-con link">
-                    <img src="./assets/boogie8934_create_a_send_mail_icon_5d39ca7b-1acf-4410-bbaf-7c437e9d4274 1.png" id="gmail">
-                   <a href="mailto:torrinfields@trueuxdesigns.com" id="gmail" >torrinfields@trueuxdesigns.com</a>
+                <div class="flex-con">
+                    <img src="./assets/boogie8934_create_a_send_mail_icon_5d39ca7b-1acf-4410-bbaf-7c437e9d4274 1.png">
+                   <a class="gmail" href="mailto:torrinfields@trueuxdesigns.com" >torrinfields@trueuxdesigns.com</a>
                 </div>
-                <div class="flex-con link">
-                    <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta" class="gmail">
-                   <a href="https://instagram.com/tru_storry?igshid=NGVhN2U2NjQ0Yg==" target="__main">@Tru_Story</a>
+                <div class="flex-con third-con">
+                    <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta">
+                   <a class="gmail" href="https://instagram.com/tru_storry?igshid=NGVhN2U2NjQ0Yg==" target="__main" >@Tru_Story</a>
                 </div>
             </div>
            </div>
