--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
              
                 <div class="flex-con">
                     <img src="./assets/boogie8934_create_a_send_mail_icon_5d39ca7b-1acf-4410-bbaf-7c437e9d4274 1.png">
-                   <a class="gmail" href="mailto:torrinfields@trueuxdesigns.com" >torrinfields@trueuxdesigns.com</a>
+                   <a class="gmail" id="kon" href="mailto:torrinfields@trueuxdesigns.com" >torrinfields@trueuxdesigns.com</a>
                 </div>
                 <div class="flex-con third-con">
                     <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta">
