--- a/movie-night.html
+++ b/movie-night.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="flex-con third-con">
                     <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta">
-                   <a class="gmail" href="https://instagram.com/tru_storry?igshid=NGVhN2U2NjQ0Yg==" target="__main" >@Tru_Story</a>
+                   <a class="gmail" href="https://instagram.com/tru_storry?igshid=NGVhN2U2NjQ0Yg==" target="__main" >@Tru_storry</a>
                 </div>
             </div>
            </div>
@@ -71,7 +71,7 @@
     <section class="one">
         <div class="wrapper">
             <img src="./assets/moviehu.png" alt="citizen" class="citizen">
-            <a href="https://trustorry.com/">https://trustorry.com/</a>
+            <a id="movie-night-link" href="https://www.figma.com/proto/6LSxcftshu880VR9hnvoLB/Untitled?type=design&node-id=30-474&t=QIHu0ws57tSFHrqM-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=30%3A474&show-proto-sidebar=1">https://www.figma.com/proto/6LSxcftshu880VR9hnvoLB/Untitled?type=design&node-id=30-474&t=QIHu0ws57tSFHrqM-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=30%3A474&show-proto-sidebar=1</a>
         </div>
     </section>
     <section class="points">
