--- a/the-citizen-project.html
+++ b/the-citizen-project.html
@@ -50,7 +50,7 @@
                      </div>
                      <div class="flex-con third-con">
                          <img src="./assets/boogie8934_instagram_logo_b30183ef-01ea-4c62-8735-4c6a906d646e 1.png" alt="insta">
-                        <a class="gmail" href="https://instagram.com/tru_storry?igshid=NGVhN2U2NjQ0Yg==" target="__main" >@Tru_Story</a>
+                        <a class="gmail" href="https://instagram.com/tru_storry?igshid=NGVhN2U2NjQ0Yg==" target="__main" >@Tru_storry</a>
                      </div>
                  </div>
                 </div>
