--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
     <div class="replace-candy-1">
         <div class="background-1">
            <div  class="content-case">
-            <div  style="color: #d31b1b;">
+            <div  style="color: #1450A3;">
                 <h2 class="name-study">Citizen Project</h2>
                 <p class="sec-name" >community platform</p>
                 </div>
                 <div class="inner-image">
                     <img src="./assets/Mask group (2).png" alt="city" class="images-upper" >
                 </div>
-               <div  style="color: #d31b1b;">
+               <div  style="color: #1450A3;">
                 <h2 class="name-study">01 / <span>03</span></h2>
-                <a href="the-citizen-project.html"  class="name-study"  style="color: #d31b1b;">Case Study</a>
+                <a href="the-citizen-project.html"  class="name-study"  style="color: #1450A3;">Case Study</a>
                </div>
            </div>
            <div class="btns-bottom">
@@ -175,7 +175,7 @@
                     <img src="./assets/Image 2 (1).png" alt="city" class="image-2-3">
                    <div  style="color: #fff;">
                     <h2 class="name-study">03 / <span>03</span></h2>
-                    <a href="true-story.html"  class="name-study"  style="color: #d31b1b;">Case Study</a>
+                    <a href="true-story.html"  class="name-study"  style="color: #fff;">Case Study</a>
                    </div>
                </div>
             </div>
