--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                 <h2 class="name-study">Citizen Project</h2>
                 <p class="sec-name" >community platform</p>
                 </div>
-                <div class="inner-image">
-                    <img src="./assets/Mask group (2).png" alt="city" class="images-upper" >
+                <div class="inner-image" onclick="window.location.href='the-citizen-project.html'" >
+                 <a href="movie-night.html"><img src="./assets/Mask group (2).png" alt="city" class="images-upper" ></a>
                 </div>
                <div  style="color: #1450A3;">
                 <h2 class="name-study">01 / <span>03</span></h2>
@@ -162,7 +162,7 @@
                     </div>
                    
                     </div>
-                    <img src="./assets/Mask group (2).png" alt="city" class="upper-img image-2-3">
+                    <img onclick="window.location.href='movie-night.html'" src="./assets/Mask group (2).png" alt="city" class="upper-img image-2-3">
                    <div  style="color: #fff;">
                     <h2 class="name-study">02 / <span>03</span></h2>
                     <a href="movie-night.html"  class="name-study"  style="color: #fff;">Case Study</a>
@@ -183,14 +183,14 @@
     <div class="replace-candy-3">
         <div class="background-3">
             <div  class="content-case">
-                <div  style="color: #fff;">
+                <div  style="color: #4389eb;">
                     <h2 class="name-study">True Story</h2>
                     <p class="sec-name" >Pop Culture Apparel</p>
                     </div>
-                    <img src="./assets/Image 2 (1).png" alt="city" class="image-2-3">
-                   <div  style="color: #fff;">
+                    <img onclick="window.location.href='true-story.html'" src="./assets/image-true.png" alt="city" class="image-2-4">
+                   <div  style="color: #4389eb;">
                     <h2 class="name-study">03 / <span>03</span></h2>
-                    <a href="true-story.html"  class="name-study"  style="color: #fff;">Case Study</a>
+                    <a href="true-story.html"  class="name-study"  style="color: #4389eb;">Case Study</a>
                    </div>
                </div>
             </div>
